--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,32 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css" />
+        <title>Personal Bio</title>
     </head>
     <body>
         <!-- Add Code Here -->
+        <div name="heading">
+        <h1>Personal Bio</h1>
+        </div>
+        <div name="information">
+            <h4>
+            <ul>
+                <li>First Name: Sing Hui</li>
+                <li>Last Name: Tan</li>
+                <li>My GitHub URL: <a href="https://github.com/tshhh123" target="new">Click here</a></li>
+                <li>My Location: <img src="https://cdn-icons-png.flaticon.com/128/555/555538.png" alt="Singapore"></li>
+                <li>My Hobbies:
+                    <ol>
+                        <li>Watching Sunset</li>
+                        <li>Walking in the park</li>
+                        <li>Cycling</li>
+                    </ol>
+                </li>
+                <li>A short paragraph about you:
+                    <p><q>Hi, I am Sing and I am a student of NTU's SCTP in Software Engineering.</q></p>
+                </li>
+            </ul>
+        </h4>
+        </div>
     </body>
 </html>
